--- a/public/css/contacts_segment.css
+++ b/public/css/contacts_segment.css
@@ -1,6 +1,6 @@
 /*Contacts segment*/
 .contacts-segment {
-    margin: 2vh 160px 10vh 160px;
+    margin: 2vh 0 10vh 0;
     padding-top: 10vh;
 }
 
