--- a/public/css/goods_segment.css
+++ b/public/css/goods_segment.css
@@ -1,6 +1,6 @@
 /*Goods segment*/
 .goods-segment {
-    margin: 2vh 60px 10vh 60px;
+    margin: 2vh 0 10vh 0;
     padding-top: 10vh;
 }
 
