--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,14 @@
+/* hide scrollbar but allow scrolling */
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 /*HTML and Body*/
 html {
     scroll-behavior: smooth;
@@ -5,25 +16,65 @@ html {
 
 body {
     margin: 0;
-    /*background-image: url("../images/clouds_bg.jpg");*/
     background-color: #faeded;
-    /*backdrop-filter: blur(14px);*/
     font-family: "Gilroy";
 }
 
-.container {
+@media screen and (min-device-width: 320px) and (max-device-width: 768px) {
+    .welcome-segment {
+        height: auto;
+    }
 
+    .scroll-down-icon {
+        visibility: hidden;
+    }
+
+    .down-arrow-icon {
+        visibility: hidden;
+    }
+
+    .goods-segment-container {
+        margin: 0 2em 0 2em;
+    }
+
+    .contacts-segment-container {
+        margin: 0 2em 0 2em;
+    }
 }
 
-/*Segments*/
-/*.welcome-segment, .about-segment {*/
-/*    height: 80vh;*/
-/*}*/
 
+@media screen and (min-device-width: 769px) and (max-device-width: 1200px) {
+    .welcome-segment {
+        height: 70vh;
+    }
+
+    .goods-segment-container {
+        margin: 0 8em 0 8em;
+    }
+
+    .contacts-segment-container {
+        margin: 0 8em 0 8em;
+    }
+}
+
+
+@media screen and (min-device-width: 1201px) {
+    .welcome-segment {
+        height: 70vh;
+    }
+
+    .goods-segment-container {
+        margin: 0 10em 0 10em;
+    }
+
+    .contacts-segment-container {
+        margin: 0 10em 0 10em;
+    }
+}
 
 /*Welcome segment*/
 .welcome-segment {
-    margin-top: 180px;
+    margin-top: 20vh;
 }
 
 .welcome-segment .title {
@@ -70,10 +121,11 @@ body {
 .scroll-down-icon-area {
     display: flex;
     justify-content: center;
-    margin-top: 10vh;
 }
 
 .scroll-down-icon {
+    position: absolute;
+    bottom: 10vh;
     height: 30px;
     user-select: none;
 }
@@ -81,26 +133,43 @@ body {
 .down-arrow-icon-area{
     display: flex;
     justify-content: center;
-    margin-top: 6px;
 }
 
 .down-arrow-icon {
+    position: absolute;
+    bottom: 6vh;
     height: 16px;
     user-select: none;
+    animation-duration: 2s;
+    animation-name: arrow-moves;
+    animation-iteration-count: infinite;
+}
+
+@keyframes arrow-moves {
+    0% {
+        bottom: 7vh;
+    }
+
+    30% {
+        bottom: 4vh;
+    }
+
+    100% {
+        bottom: 7vh;
+    }
 }
 
 
+/*!*About segment*!*/
+/*.about-segment {*/
+/*    margin: 10vh 60px 10vh 60px;*/
+/*}*/
 
-/*About segment*/
-.about-segment {
-    margin: 10vh 60px 10vh 60px;
-}
-
-.about-segment .title {
-    font-size: 50px;
-    font-weight: 500;
-    margin: 0;
-}
+/*.about-segment .title {*/
+/*    font-size: 50px;*/
+/*    font-weight: 500;*/
+/*    margin: 0;*/
+/*}*/
 
 
 /*.vertical-line {*/
